quick fixes before publishing v1.1.66 to iTunes. Fixed the header bars margin on iOS, adjusted border-boxes. Fixed the attachment thumbnails.

--- a/LightSurveys.App/source/scss/_platforms.scss
+++ b/LightSurveys.App/source/scss/_platforms.scss
@@ -11,11 +11,15 @@
     .bar-subheader,
     .has-subheader,
     .has-header {
-        /*margin-top: -20px !important;*/
+        margin-top: -20px !important;
     }
 
     .scroll-content .has-header {
         top: 60px !important;
+    }
+
+    .button-compact {
+        padding-top: 2px !important;
     }
 }
 
