--- a/LightSurveys.App/source/scss/_survey_form_screen.scss
+++ b/LightSurveys.App/source/scss/_survey_form_screen.scss
@@ -103,9 +103,8 @@
         padding: 0 10px 5px;
 
         .thumbnail {
-            width: 70px;
-            height: 70px;
-            vertical-align: central;
+            width: 80px;
+            height: 80px;
             margin: 5px;
             overflow: hidden;
 
