--- a/LightSurveys.App/source/scss/_survey_screen.scss
+++ b/LightSurveys.App/source/scss/_survey_screen.scss
@@ -78,6 +78,12 @@
                 width: 70px;
                 height: 70px;
             }
+
+            .thumbnail-placeholder {
+                width: 100% !important;
+                height: 100% !important;
+                text-align: center;
+            }
         }
     }
 }
